EPBR-1784 Add patch endpoint to update client
Add a patch endpoint to the client controller, update the update usecase to allow for the specific functionality of the endpoint. Update the tests to cover the new endpoint and usecase updates. Update the yml to add the new endpoint.
